%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1107 &-8146207221865326999
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: TposeHand
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -442371859747227434}
    m_Position: {x: 330, y: 240, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 6422149835340768817}
    m_Position: {x: 330, y: 130, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -442371859747227434}
--- !u!206 &-7466333992250117428
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Jump
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: -8183224268752077907, guid: 6e151587b65e1fc4580e23b51c64d183,
      type: 3}
    m_Threshold: -5
    m_Position: {x: -1, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -4469183485442372851, guid: 6e151587b65e1fc4580e23b51c64d183,
      type: 3}
    m_Threshold: 0
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 8842878171678463616, guid: 6e151587b65e1fc4580e23b51c64d183,
      type: 3}
    m_Threshold: 5
    m_Position: {x: -1, y: 5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -8183224268752077907, guid: 6e151587b65e1fc4580e23b51c64d183,
      type: 3}
    m_Threshold: 10
    m_Position: {x: 1, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: -4469183485442372851, guid: 6e151587b65e1fc4580e23b51c64d183,
      type: 3}
    m_Threshold: 15
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 8842878171678463616, guid: 6e151587b65e1fc4580e23b51c64d183,
      type: 3}
    m_Threshold: 20
    m_Position: {x: 1, y: 5}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: -7727135423134997463, guid: 51dd2e4c869794f75a0df7d54b210214,
      type: 3}
    m_Threshold: 25
    m_Position: {x: -3, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -5059006814000262888, guid: 51dd2e4c869794f75a0df7d54b210214,
      type: 3}
    m_Threshold: 30
    m_Position: {x: -5, y: 3}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -7727135423134997463, guid: 51dd2e4c869794f75a0df7d54b210214,
      type: 3}
    m_Threshold: 35
    m_Position: {x: -4, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -7727135423134997463, guid: 51dd2e4c869794f75a0df7d54b210214,
      type: 3}
    m_Threshold: 40
    m_Position: {x: 3, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: -5059006814000262888, guid: 51dd2e4c869794f75a0df7d54b210214,
      type: 3}
    m_Threshold: 45
    m_Position: {x: 4, y: 3}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: -7727135423134997463, guid: 51dd2e4c869794f75a0df7d54b210214,
      type: 3}
    m_Threshold: 50
    m_Position: {x: 5, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 7400004, guid: 0d9d26e2162aa4d11ab075b34c029673, type: 3}
    m_Threshold: 55
    m_Position: {x: 0, y: -10}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerPosture
    m_Mirror: 0
  m_BlendParameter: "\u5DE6\u53F3\u811A"
  m_BlendParameterY: "\u5782\u76F4\u901F\u5EA6"
  m_MinThreshold: -5
  m_MaxThreshold: 55
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 2
--- !u!1102 &-7415901182092444783
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: mixamo_com
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 2884366329936334352}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -203655887218126122, guid: c926848cd4efbe84480fcbcc9b09e1ca,
    type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-6215459493356687196
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Aim
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -7415901182092444783}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.2636025
  m_TransitionOffset: 0
  m_ExitTime: 1.0000002
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!206 &-5166993458114689913
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Stand
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: dffa50cfe77e0434bbfa71245b3dd529, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: b1a5e04ae51004842aba06704a6c2903, type: 3}
    m_Threshold: 0.1
    m_Position: {x: 0, y: 1.5584016}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 1c52c953c83c2254a9fa72d50250f028, type: 3}
    m_Threshold: 0.2
    m_Position: {x: -1.089123, y: 1.558402}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 1c52c953c83c2254a9fa72d50250f028, type: 3}
    m_Threshold: 0.3
    m_Position: {x: 1.0891232, y: 1.558402}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: bb141fc9a700c9c4ca7e6dadb8acf24b, type: 3}
    m_Threshold: 0.4
    m_Position: {x: -1.7687002, y: 1.558402}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: bb141fc9a700c9c4ca7e6dadb8acf24b, type: 3}
    m_Threshold: 0.5
    m_Position: {x: 1.7687002, y: 1.558402}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 1cb8ed3cbba15f0479fbae54e0a963df, type: 3}
    m_Threshold: 0.6
    m_Position: {x: 0, y: 5.6623163}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 1062212255550964e974f3ffb3cbaae3, type: 3}
    m_Threshold: 0.7
    m_Position: {x: -1.6844275, y: 5.662316}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 1062212255550964e974f3ffb3cbaae3, type: 3}
    m_Threshold: 0.8
    m_Position: {x: 1.6844275, y: 5.662316}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: f2bed5dc5afacff44a00de8daae9703b, type: 3}
    m_Threshold: 0.9
    m_Position: {x: -2.3185372, y: 5.662316}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: f2bed5dc5afacff44a00de8daae9703b, type: 3}
    m_Threshold: 1
    m_Position: {x: 2.3185372, y: 5.662316}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400014, guid: 6fb3851da6a6f5948ab6892bee8ba920, type: 3}
    m_Threshold: 1.1
    m_Position: {x: -2.4658675, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400006, guid: 6fb3851da6a6f5948ab6892bee8ba920, type: 3}
    m_Threshold: 1.2
    m_Position: {x: 2.4658675, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400010, guid: 6fb3851da6a6f5948ab6892bee8ba920, type: 3}
    m_Threshold: 1.3000001
    m_Position: {x: -1.3902802, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 6fb3851da6a6f5948ab6892bee8ba920, type: 3}
    m_Threshold: 1.4000001
    m_Position: {x: 1.3902802, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  m_BlendParameter: RotateSpeed
  m_BlendParameterY: MoveSpeed
  m_MinThreshold: 0
  m_MaxThreshold: 1.4000001
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 2
--- !u!1102 &-5093588433548016019
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 1
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 2409312730897520749}
  m_Tag: 
  m_SpeedParameter: ScaleFactor
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!206 &-5060527846340286815
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BlendTree
  m_Childs: []
  m_BlendParameter: Posture
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &-4302474972503035106
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Crouch
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400012, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0.14285715
    m_Position: {x: -1.528762, y: 0}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400010, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0.2857143
    m_Position: {x: 1.528762, y: 0}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400004, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0.42857146
    m_Position: {x: 0, y: 1.1213616}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400008, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0.5714286
    m_Position: {x: -0.7632676, y: 1.0035164}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400014, guid: d89ea37480b6d75458aa38843e9688dc, type: 3}
    m_Threshold: 0.71428573
    m_Position: {x: 0.7632674, y: 1.003516}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  m_BlendParameter: "\u8F6C\u5F2F\u901F\u5EA6"
  m_BlendParameterY: "\u79FB\u52A8\u901F\u5EA6"
  m_MinThreshold: 0
  m_MaxThreshold: 0.71428573
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 2
--- !u!1102 &-3608101808929902321
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Take 001
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 1827226128182048838, guid: ac7384fd2e8af364c8b35ecc4faaeda5,
    type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &-3463114200552655200
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -5093588433548016019}
    m_Position: {x: 300, y: 120, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 7425503355332008082}
    m_Position: {x: 340, y: 200, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -2881049588977051616}
    m_Position: {x: 360, y: 290, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -3608101808929902321}
    m_Position: {x: 304.62704, y: 466.1417, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 690, y: 180, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -5093588433548016019}
--- !u!1102 &-2881049588977051616
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Thands
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 1f38480e0fcdb5e439d449daf7209987, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-2693551170616717423
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Aim
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -7415901182092444783}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.2636025
  m_TransitionOffset: 0
  m_ExitTime: 1.0000002
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-929602474506553501
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Nothing
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -2693551170616717423}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 0}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &-442371859747227434
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: None
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -264046655960962884}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 0}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-264046655960962884
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: MoveSpeed
    m_EventTreshold: 0.01
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 6422149835340768817}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: ThirdPerson
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: Posture
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: MoveSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: RotateSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: ScaleFactor
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Aim
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: -3463114200552655200}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 5
    m_Name: Aim
    m_StateMachine: {fileID: 7809909876129658444}
    m_Mask: {fileID: 31900000, guid: 83922c6d3459f5546ad6bef6b6a6f9bf, type: 2}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 1
    m_IKPass: 1
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 5
    m_Name: TposeHand
    m_StateMachine: {fileID: -8146207221865326999}
    m_Mask: {fileID: 31900000, guid: 83922c6d3459f5546ad6bef6b6a6f9bf, type: 2}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0.26
    m_IKPass: 1
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &2409312730897520749
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: -5166993458114689913}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: PlayerForm
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 0d9d26e2162aa4d11ab075b34c029673, type: 3}
    m_Threshold: 2
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  m_BlendParameter: Posture
  m_BlendParameterY: Blend
  m_MinThreshold: 1
  m_MaxThreshold: 2
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!1101 &2884366329936334352
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Aim
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -929602474506553501}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.44474363
  m_TransitionOffset: 0
  m_ExitTime: 0.84835887
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &6069142090501234206
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: MoveSpeed
    m_EventTreshold: 0.01
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -442371859747227434}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &6422149835340768817
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Tpose 1
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 6069142090501234206}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -203655887218126122, guid: baf84c6c2293e0942af290475326f5b7,
    type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &7425503355332008082
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: NewHand
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 4e5597c1025adb946920e08697ce6d3e, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &7809909876129658444
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Aim
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -929602474506553501}
    m_Position: {x: 310, y: 110, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -7415901182092444783}
    m_Position: {x: 310, y: 220, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 70, y: 110, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -929602474506553501}
